# corsair-780t-fan-control-mod

./: .gitignore  LICENSE  README.md  install.sh
Arduino/: README.md
Arduino/corsair_fan_control_mod/: BulkUSB.cpp  BulkUSB.h  corsair_fan_control_mod.ino
src/: CMakeLists.txt  main.cpp
